--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -63,22 +63,16 @@
 .main .result {
   font-weight: bold;
   margin-top: 40px;
-  width: 80%;
+  max-width: 80%;
+  
   display: inline-block;
   word-break: break-all;
   white-space: pre-wrap;
   
 }
 .main h1 {
-font-size-adjust: 20%;
+font-size: 5px;
+text-align: center;
 }
 
-.main block {
-background-color: beige;
-border-radius: 2px;
-border: #202123;
-text-align: left;
-
-
-}
 
