--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -61,8 +61,13 @@
   flex-direction: column;
   align-items: center;
   padding: 1.5rem; /* Added padding */
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.7);
   border-radius: 8px;
+  line-height: 1;
+}
+.recipeTitle {
+  font-weight: bold;
+  font-size: 1.5em;
 }
 
 .main,
